kubernetes/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-frontend # Name of the ingress object
  namespace: longhorn-system # Name of the namespace
spec:
  rules:
    - host: "longhorn.kube.home" # Your hostname
      http:
        paths:
          # Path-based routing settings:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend # The name of the service
                port:
                  number: 80 # Service Portnumber
